<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <item
        android:id="@+id/menu_search"
        android:icon="@drawable/ic_search"
        android:iconTint="@color/white"
        android:title="@string/search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="ifRoom"
        tools:targetApi="o" />

    <group android:checkableBehavior="single">
        <item android:title="@string/sort_by">
            <menu>
                <item android:title="@string/priority_high"  android:id="@+id/menu_high"/>
                <item android:title="@string/priority_low" android:id="@+id/menu_low"/>
            </menu>
        </item>
    </group>

    <item
        android:id="@+id/menu_delete_all"
        android:title="@string/delete_all"
        app:showAsAction="never" />
</menu>